# llvm2nts

./: .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  environment  output.nts  pthread_example.nts  run_grind.sh  runit.sh
llvm2nts/: CMakeLists.txt  FunctionMapping.cpp  FunctionMapping.hpp  ModuleMapping.cpp  ModuleMapping.hpp  llvm2nts.cpp  llvm2nts.hpp  llvmFunction2nts.cpp  llvmFunction2nts.hpp  sugar.cpp  sugar.hpp  types.cpp  types.hpp  util.cpp  util.hpp
llvm2nts/instructions/: Constants.cpp  Constants.hpp  IInst.hpp  InstAdd.cpp  InstAdd.hpp  InstAlloca.cpp  InstAlloca.hpp  InstBr.cpp  InstBr.hpp  InstCall.cpp  InstCall.hpp  InstIcmp.cpp  InstIcmp.hpp  InstLoadStore.cpp  InstLoadStore.hpp
nts/: AtomicRelation.hpp  BinaryOpBase.hpp  BoolOp.cpp  CMakeLists.txt  Call.cpp  Call.hpp  ConcreteArithmetic.cpp  ConcreteArithmetic.hpp  ConcreteCtx.cpp  ConcreteFormula.cpp  ConcreteFormula.hpp  Formula.cpp  Formula.hpp  Havoc.cpp  Havoc.hpp  Makefile  NTS.cpp  NTS.hpp  NtsDeclaration.hpp  NtsModule.cpp  NtsModule.hpp  NtsRef.hpp  TransitionRule.hpp  Variable.hpp  VariableIdentifier.cpp  VariableIdentifier.hpp  util.hpp
pass/: CMakeLists.txt  Makefile  Pass.cpp
run/: CMakeLists.txt  main.cpp
src/: .ycm_extra_conf.py  CMakeLists.txt  FunctionMapping.cpp  FunctionMapping.hpp  Makefile  Pass.cpp  VariableManager.cpp  VariableManager.hpp  llvm2nts.cpp  llvm2nts.hpp  llvmFunction2nts.cpp  run_grind.sh  runit.sh
src/instructions/: IInst.hpp  InstAdd.cpp  InstAdd.hpp  InstBr.cpp  InstBr.hpp  InstLoadStore.cpp  InstLoadStore.hpp
src/nts/: AbstractArithmetic.cpp  AbstractArithmetic.hpp  Arithmetic.cpp  Arithmetic.hpp  AtomicProposition.hpp  AtomicRelation.cpp  AtomicRelation.hpp  BinaryOpBase.cpp  BinaryOpBase.hpp  BoolOp.hpp  BooleanTerm.cpp  BooleanTerm.hpp  CMakeLists.txt  ConcreteCtx.hpp  Formula.cpp  Formula.hpp  Havoc.cpp  Havoc.hpp  IPrint.hpp  Makefile  NTS.cpp  NTS.hpp  Printable.cpp  Printable.hpp  Variable.hpp  VariableIdentifier.hpp
src/test_nts/: CMakeLists.txt  Makefile  test_Printable.cpp
test_llvm2nts/: CMakeLists.txt  test_instructions.cpp  test_main.cpp
test_llvm2nts/test_cases/: 00_empty.ll  00_empty.nts  01_load_store_alloca.ll  01_load_store_alloca.nts  02_call.ll  02_call.nts  03_global.ll  03_global.nts  04_pthread_create.ll  04_pthread_create.nts  05_add.ll  05_add.nts  06_icmp.ll  06_icmp.nts  07_br.ll  07_br.nts
test_nts/: CMakeLists.txt  Makefile  test_Nts.cpp  test_Printable.cpp
